[tool.poetry]
name = "carrier-bot"
version = "0.1.0"
description = ""
authors = ["Knei#4714"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
mojang = "^0.1.8"
aiohttp = "^3.7.4"
pymongo = "^3.11.4"
dnspython = "^2.1.0"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
